# asciidoc-for-dita-scripts

./: .adt-modules.json  .adtconfig.json  .dockerignore  .gitignore  .pre-commit-config.yaml  BETA_TEST_CrossReference.md  CHANGELOG.md  CLAUDE.md  ContentType_Implementation_Summary.md  DirectoryConfig_Refactoring_Summary.md  Dockerfile  Dockerfile.production  Gemfile  MANIFEST.in  MIGRATION.md  Makefile  PYTEST_MIGRATION.md  README.md  REFACTORING_REPORT.md  SECURITY.md  UNIFIED_PACKAGE_COMPLETION.md  adt-user-config.json  adt_journey.py  adt_module_personas_guide.md  asciidoc-dita-toolkit-analysis.md  asciidoc-dita-toolkit.code-workspace  asciidoc_toolkit.py  chunk6_completion_summary.py  commit-integration-guide.md  conftest.py  coverage_gaps_resolution_summary.md  debug_code_blocks.py  debug_config.py  debug_coverage_gaps.py  debug_save_detailed.py  debug_specific_lines.py  fetch-fixtures.sh  file_utils.py  fix_broken_imports.sh  fix_entity_references.py  (+35 more)
.github/ISSUE_TEMPLATE/: beta-testing-feedback.md
.github/workflows/: changelog.yml  ci.yaml  ci.yml  container-build.yml  fetch-fixtures.yml  nightly-release.yml  pages.yml  publish.yml
archive/: BETA_RELEASE_PROCESS.md  BETA_TESTING.md  BETA_TESTING_GUIDE.md  CLI_SIMPLIFICATION_DESIGN.md  CONTAINER_DISTRIBUTION.md  CONTRIBUTING_legacy.md  GUI_GUIDE.md  IMPLEMENTATION_COMPLETE.md  README_legacy.md  adt-configuration-mvp.md  adt_journey.py  agentic-review-prompts.md  docker-compose.yml  empty_content_type.adoc  fetch-fixtures.sh  launch-gui.bat  nightly-release.yml  rules_to_html.py
archive/debug_scripts/: README.md  debug_admonition_detailed.py  debug_code_blocks.py  debug_code_blocks_detailed.py  debug_context_detection.py  debug_detection.py  debug_example_lines.py  debug_report_files.py  debug_specific_lines.py
archive/test_scripts/: README.md  test_directory_config_beta.sh  test_example_block.py  test_interactive_flow.py
asciidoc_dita_toolkit/: __init__.py  find_beta_files.py  test_files.py
asciidoc_dita_toolkit/adt_core/: __init__.py  __main__.py  cli.py  completion.py  exceptions.py  module_sequencer.py
asciidoc_dita_toolkit/asciidoc_dita/: __init__.py  cli.py  cli_utils.py  config_utils.py  file_utils.py  gui.py  plugin_manager.py  regex_patterns.py  security_utils.py  toolkit.py  ui_framework.py  user_interface.py  workflow_utils.py
asciidoc_dita_toolkit/beta_testing_files/: QUICK_START.md  README.md  __init__.py  commented_content_type.adoc  con_example.adoc  correct_concept.adoc  correct_procedure.adoc  correct_reference.adoc  deprecated_test.adoc  docker_commands.adoc  empty_content_type.adoc  (+6 more)
demo/: DEMO_OVERVIEW.md  README.md  enhanced_demo.py  presentation.md  setup_demo.sh  web_demo.html
demo_presentation/: procedure_example.adoc
design-docs/: ContentType_Plugin_Output_Catalog.md  ContentType_Plugin_Output_Minimalist.md
docs/: BETA_RELEASE_PROCESS.md  BETA_TESTING.md  BETA_TESTING_GUIDE.md  BETA_TEST_CrossReference.md  CLI_SIMPLIFICATION_DESIGN.md  CONTAINER_DISTRIBUTION.md  CONTENTTYPE_UI_DESIGN_SPECIFICATION.md  CONTEXT_MIGRATION_GUIDE.md  CONTEXT_MIGRATION_SPEC.md  CONTEXT_MIGRATION_intention.md  CONTRIBUTING.md  DirectoryConfig.md  GUI_GUIDE.md  MIGRATION.md  MODULE_EXECUTION_SPEC copy.md  MODULE_EXECUTION_SPEC.md  MODULE_SEQUENCER.md  Optimization request template.md  Optimize the following github copilot pr.md  PHASE_1_2_COMPLETION_REPORT.md  PHASE_3_1_COMPLETION_REPORT.md  PHASE_4_COMPLETION_REPORT.md  PLUGINS_USER_GUIDE.md  PLUGIN_DEVELOPMENT_PATTERN.md  README.md  RELEASE_MANAGEMENT.md  TAB_COMPLETION.md  TROUBLESHOOTING.md  _config.yml  asciidoc-dita-toolkit.md  github_issue_template.md  index.md
docs-repo/: COPILOT_FEEDBACK_RESPONSE.md  PHASE_3_STRATEGY.md  PHASE_5_FINAL_COMPLETION_REPORT.md
modules/: __init__.py  archive_unused_files.py  book-by-book-processor.py  content_type.py  convert-xrefs-for-dita.sh  directory_config.py  dita-xref-converter.py  entity_reference.py  example_block.py  id-filename-map.rb  user_journey.py
modules_legacy_backup/: archive_unused_files.py  example_block.py  user_journey.py
plugins/: ContentType.py  EntityReference.py  FixContentType.py  fix_content_type.py  fix_entity_references.py
scripts/: DEMO_PRESENTATION.md  README.md  adt-completion.bash  adt-docker  ci-smoke-test.py  container.sh  create_plugin.py  delete_stale_branches.sh  demo_quick_reference.md  demo_v2.sh  dev-setup.sh  generate-changelog.sh  install-completion.sh  new_test.py  pre_demo_check.sh
test-pypi-install/: pyvenv.cfg
test_comprehensive/: assembly_test.adoc  test.adoc
test_dir/: proc_example.adoc
test_docs/: test_doc.adoc
test_files/: README.md  assembly_example.adoc  commented_content_type.adoc  deprecated_test.adoc  dita_compatibility_test.adoc  empty_deprecated.adoc  html_entity_test.adoc  installing_docker.adoc  missing_content_type.adoc  proc_example.adoc  proc_test.adoc  role_sanitizer_test.adoc  what_is_containerization.adoc
test_files_backup/: con_example.adoc  docker_guide_assembly.adoc  ref_example.adoc
tests/: __init__.py  asciidoc_testkit.py  chunk6_completion_summary.py  chunk6_validation.py  conftest.py  debug_config.py  debug_coverage_gaps.py  debug_save.py  debug_save_detailed.py  debug_test.py  debug_user_journey.py  final_mvp_validation.py  performance_validation.py  run_tests.py  test-version-paths.sh  test_AttributeReference.py  test_ContentType.py  test_CrossReference.py  test_DirectoryConfig.py  test_EntityReference.py  test_IncludeDirective.py  test_adt_configuration_validation.py  test_archive_unused_files.py  test_chunk4_validation.py  test_chunk5_validation.py  test_cli.py  test_cli.py.legacy-removed  test_content_type_plugin.py  test_contenttype_plugin.py  test_context_analyzer.py  test_context_migrator.py  test_coverage_gaps_comprehensive.py  test_cross_reference_enhanced.py  test_discovery.py  test_documentation_alignment.py  test_example_block_dual.py  test_fix_entity_references.py  test_inheritance.py  test_inheritance_detailed.py  test_integration.py  (+15 more)
user-guide/: Gemfile  README.md  _config.yml  index.md  plugins.md
(+167 files in other folders)
